<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_gray" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgOval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="80dp"
            android:layout_marginStart="@dimen/dimen_64"
            android:layout_marginEnd="@dimen/dimen_64"
            app:srcCompat="@drawable/ic_oval"/>

        <com.pan.dskit.textview.PanTitleLabel.PanTitleLabel
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/imgOval"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_68"
            android:layout_marginStart="@dimen/dimen_64"
            android:layout_marginEnd="@dimen/dimen_64"
            app:text_label="@string/txt_title_success"
            app:align_label="start"
            app:color_label="white"/>

        <com.pan.dskit.textview.PanLabel.PanLabel
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_32"
            android:layout_marginStart="@dimen/dimen_64"
            app:text_label="@string/txt_subtitle_success"
            app:color_label="white"
            app:align_label="start"/>

        <com.pan.dskit.button.PanRoundButton.PanRoundButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnOpenReceipt"
            app:layout_constraintVertical_bias="0"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:layout_marginBottom="@dimen/dimen_32"
            app:text_button="@string/txt_btn_finish_contract_success"
            app:type_button="primary" />

        <com.pan.dskit.button.PanLinkButton.PanLinkButton
            android:id="@+id/btnOpenReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:layout_marginBottom="@dimen/dimen_68"
            app:text_button="@string/txt_btn_open_receipt_success"
            app:type_button="secundary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>