<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.pan.dskit.toolbar.PanToolbar.PanToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="80dp" />

        <com.pan.dskit.textview.PanTitleLabel.PanTitleLabel
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_margin="@dimen/dimen_64"
            app:text_label="@string/txt_title_simulation"
            app:align_label="center"
            app:color_label="black"/>

        <com.pan.dskit.textview.PanTitleLabel.PanTitleLabel
            android:id="@+id/txtMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_10"
            app:text_label="R$ 100,00"
            app:color_label="blue"/>

        <RelativeLayout
            android:id="@+id/rlInstallments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txtMoney"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:gravity="center" >

            <com.pan.dskit.textview.PanLabel.PanLabel
                android:id="@+id/txtLabelInstallments"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="@dimen/dimen_19"
                app:text_label="@string/text_installments"
                app:style_label="regular"
                app:color_label="@color/black" />

            <com.pan.dskit.textview.PanLabel.PanLabel
                android:id="@+id/txtInstallment"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_toEndOf="@+id/txtLabelInstallments"
                android:layout_marginTop="@dimen/dimen_19"
                android:layout_marginStart="5dp"
                app:text_label=" R$ 8,00"
                app:style_label="semibold"
                app:color_label="black" />
        </RelativeLayout>

        <com.pan.dskit.seekbar.PanSlider.PanSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rlInstallments"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnContinue"
            android:layout_marginTop="70dp"
            android:layout_marginStart="@dimen/dimen_24"
            android:layout_marginEnd="@dimen/dimen_24"
            android:layout_marginBottom="70dp"
            app:min_value="100"
            app:max_value="1500"/>

        <com.pan.dskit.button.PanRoundButton.PanRoundButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnToCustomSimulation"
            app:layout_constraintVertical_bias="1"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:layout_marginBottom="@dimen/dimen_32"
            app:text_button="@string/txt_btn_continue_simulation"
            app:type_button="primary" />

        <com.pan.dskit.button.PanLinkButton.PanLinkButton
            android:id="@+id/btnToCustomSimulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:layout_marginBottom="68dp"
            app:text_button="@string/txt_btn_type_value_simulation"
            app:type_button="primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>