<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dodger_blue"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dodger_blue">

        <com.pan.dskit.toolbar.PanToolbar.PanToolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="80dp"
            app:has_close="gone"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_line_confirmation" />

        <com.pan.dskit.textview.PanTitleLabel.PanTitleLabel
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/dimen_64"
            app:text_label="@string/txt_title_confirmation"
            app:align_label="start"
            app:color_label="white"/>

        <com.pan.dskit.textview.PanTitleLabel.PanTitleLabel
            android:id="@+id/txtValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            android:layout_marginStart="@dimen/dimen_64"
            app:text_label="R$ 1.500,00"
            app:color_label="white"/>

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/txtValue"
            app:layout_constraintStart_toStartOf="@+id/txtValue"
            app:layout_constraintEnd_toEndOf="@+id/txtValue"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="3dp"
            android:layout_marginStart="10dp" />

        <com.pan.dskit.items.PanSummaryItem.PanSummaryItem
            android:id="@+id/summaryItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_40"
            android:layout_marginStart="@dimen/dimen_64"
            android:layout_marginEnd="@dimen/dimen_64"
            app:text_key_item="Parcelas"
            app:text_value_item="24x de R$ 109,45"
            app:type_summary_item="primary"/>

        <com.pan.dskit.items.PanSummaryItem.PanSummaryItem
            android:id="@+id/summaryItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toBottomOf="@+id/summaryItem1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_64"
            android:layout_marginEnd="@dimen/dimen_64"
            app:text_key_item="Total a ser pago:"
            app:text_value_item="R$ 2.624,64"
            app:type_summary_item="primary"/>

        <com.pan.dskit.items.PanSummaryItem.PanSummaryItem
            android:id="@+id/summaryItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintTop_toBottomOf="@+id/summaryItem2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_marginStart="@dimen/dimen_64"
            android:layout_marginEnd="@dimen/dimen_64"
            android:layout_marginBottom="@dimen/dimen_10"
            app:text_key_item="O Pan devolve:"
            app:text_value_item="R$ 150,64"
            app:type_summary_item="primary"/>

        <com.pan.dskit.button.PanRoundButton.PanRoundButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnToReceipt"
            app:layout_constraintVertical_bias="0"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:layout_marginBottom="@dimen/dimen_32"
            app:text_button="@string/txt_btn_contract_confirmation"
            app:type_button="secundary" />

        <com.pan.dskit.button.PanLinkButton.PanLinkButton
            android:id="@+id/btnToReceipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dodger_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1"
            android:layout_marginStart="@dimen/dimen_40"
            android:layout_marginEnd="@dimen/dimen_40"
            android:layout_marginBottom="68dp"
            app:text_button="@string/txt_btn_check_data_confirmation"
            app:type_button="secundary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>